--- a/index.html
+++ b/index.html
@@ -1,7 +1,179 @@
 <!DOCTYPE html>
-<html>
-<body>
-<h1>Hello World</h1>
-<p>GitHub Page under construction</p>
-</body>
+<html lang="en">
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+        <meta name="description" content="" />
+        <meta name="author" content="" />
+        <title>Vote - Sami Sh</title>
+        <!-- Favicon-->
+        <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+        <!-- Font Awesome icons (free version)-->
+        <script src="https://use.fontawesome.com/releases/v5.15.3/js/all.js" crossorigin="anonymous"></script>
+        <!-- Google fonts-->
+        <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
+        <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css" />
+        <!-- Core theme CSS (includes Bootstrap)-->
+        <link href="css/styles.css" rel="stylesheet" />
+    </head>
+    <body id="page-top">
+        <!-- Navigation-->
+        <nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top" id="mainNav">
+            <div class="container">
+                <a class="navbar-brand" href="#page-top">SRC Election</a>
+                <button class="navbar-toggler text-uppercase font-weight-bold bg-primary text-white rounded" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+                    Menu
+                    <i class="fas fa-bars"></i>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarResponsive">
+                    <ul class="navbar-nav ms-auto">
+                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#portfolio">Platform</a></li>
+                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#about">About</a></li>
+                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#contact">Contact</a></li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+        <!-- Masthead-->
+        <header class="masthead bg-special text-white text-center">
+            <div class="container d-flex align-items-center flex-column">
+                <!-- Masthead Avatar Image-->
+                <img class="masthead-avatar mb-5 round" src="assets/img/15.png" alt="..." />
+                <!-- Masthead Heading-->
+                <h1 class="masthead-heading text-uppercase mb-0">Hi there</h1>
+                <!-- Icon Divider-->
+                <div class="divider-custom divider-light">
+                    <div class="divider-custom-line"></div>
+                    <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
+                    <div class="divider-custom-line"></div>
+                </div>
+                <!-- Masthead Subheading-->
+                <p class="masthead-subheading font-weight-light mb-0">
+                    My name is <b>Sami Shames El Deen</b>, enrolled in the Graduate Program in
+Computational Science (GPCS) <br><br> <b>Candidate for FAS SRC GD</b>
+                </p>
+            </div>
+        </header>
+        <!-- Portfolio Section-->
+        <section class="page-section portfolio" id="portfolio">
+            <div class="container">
+                <!-- Portfolio Section Heading-->
+                <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Platform</h2>
+                <!-- Icon Divider-->
+                <div class="divider-custom">
+                    <div class="divider-custom-line"></div>
+                    <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
+                    <div class="divider-custom-line"></div>
+                </div>
+                <!-- Portfolio Grid Items-->
+                    <div class="row">
+                        <div class="col-md-12">
+                            <div class="card">
+                                <div class="card-body">
+                                    <div id="content">
+                                        <ul class="timeline" style="list-style-type: none;">
+                                            <li class="event" data-date="12:30 - 1:00pm">
+                                                <h3>Modify the Graduate Assistantship Stipends to fulfil minimal needs</h3>
+                                                <p>The GA, TA, and RA stipends are insufficient compared to the efforts of graduate students that are
+                                                    fulfilling their duties and do not really help especially during the difficult times and tough situations
+                                                    that our country is going through. I will make every effort to propose a stipend modification that
+                                                    satisfies the minimal needs of the students.</p>
+                                            </li>
+                                            <li class="event" data-date="2:30 - 4:00pm">
+                                                <h3>Strive for more funding towards Graduate Student Supports 
+                                                </h3>
+                                                <p>I will strive to maintain essential student services such as the Financial Assistance for those who
+                                                    needs support during their university experience, and advance more funding for research related to
+                                                    thesis and publications.</p>
+                                            </li>
+                                            <li class="event" data-date="5:00 - 8:00pm">
+                                                <h3>Oppose all tuition increases for students</h3>
+                                                <p>I will oppose any tuition increases for both domestic and international students as a result of the
+                                                    dollarization policy and previous tuition increase the university is approaching. 
+                                                    </p>
+                                            </li>
+                                            <li class="event" data-date="8:30 - 9:30pm">
+                                                <h3>Establishing Connections Between Students and the Board</h3>
+                                                <p>Historically, AUB graduate students have been disconnected from the issues addressed by
+                                                    the Board of Governors. However, these decisions often have a direct impact on students'
+                                                    academic and career success. As your representative, you would actively promote
+                                                    awareness of the vital role of the board of directors by creating opportunities for students
+                                                    to work with governors. As a result, board decisions can be based on the needs and
+                                                    challenges of graduate students.</p>
+                                            </li>
+                                            <li class="event" data-date="8:30 - 9:30pm">
+                                                <h3>Quiet Study Spaces</h3>
+                                                <p>With the new distancing regulations for COVID safety, Jaffet library no longer preserves a space for
+                                                    graduates. Graduate students in the faculty need a quiet space where they can finish assignments,
+                                                    study for midterms and finals, and work on their thesis without noise. If elected, I will apply for a
+                                                    quality money grant to convert a space in the faculty into a quiet study space for all graduate
+                                                    students to use.</p>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                <!-- Vote Button-->
+                <div class="text-center mt-4">
+                    <a class="btn btn-xl btn-danger" href="https://preelections.aub.edu.lb/">
+                        <i class="fas fa-vote-yea me-2"></i>
+                        Vote Now !
+                    </a>
+                </div>
+                
+ </div>
+            </div>
+        </section>
+        <!-- About Section-->
+        <section class="page-section bg-special text-white mb-0" id="about">
+            <div class="container">
+                <!-- About Section Heading-->
+                <h2 class="page-section-heading text-center text-uppercase text-white">About Candidate</h2>
+                <!-- Icon Divider-->
+                <div class="divider-custom divider-light">
+                    <div class="divider-custom-line"></div>
+                    <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
+                    <div class="divider-custom-line"></div>
+                </div>
+                <!-- About Section Content-->
+                <div class="row">
+                    <div class="col-lg-4 ms-auto"><p class="lead">I am a second-year graduate student at  AUB in Computational Science. My primary career interest lies in Software Engineering, especially Machine Learning Engineering.</p></div>
+                    <div class="col-lg-4 me-auto"><p class="lead">With my leadership and communication skills coped with years of experience, I believe that I can strive hard enought to achieve my promises and bring student voices back to the forefront.</p></div>
+                </div>
+                <!-- About Section Button-->
+                <div class="text-center mt-4">
+                    <a class="btn btn-xl btn-outline-light" href="assets/Sami Shames El Deen CV.pdf">
+                        <i class="fas fa-download me-2"></i>
+                        My Resume
+                    </a>
+                </div>
+            </div>
+        </section>
+        <!-- Footer-->
+        <footer class="footer text-center" id="contact">
+            <div class="container">
+                <div class="row">
+                    <!-- Footer Social Icons-->
+                    <div class="col-lg-16 ">
+                            <h4 class="text-uppercase mb-4">Connect with me !</h4>
+                            <a class="btn btn-outline-light btn-social mx-1" href="https://www.facebook.com/sami.b.shameseldeen/"><i class="fab fa-fw fa-facebook-f"></i></a>
+                            <a class="btn btn-outline-light btn-social mx-1" href="https://www.instagram.com/sami_shamseldeen/"><i class="fab fa-fw fa-instagram"></i></a>
+                            <a class="btn btn-outline-light btn-social mx-1" href="https://www.linkedin.com/in/sami-sh1999/"><i class="fab fa-fw fa-linkedin-in"></i></a>
+                            <a class="btn btn-outline-light btn-social mx-1" href="https://api.whatsapp.com/send?phone=96176928149&text=%20"><i class="fab fa-fw fa-whatsapp"></i></a>
+                    </div>
+                </div>
+            </div>
+        </footer>
+        <!-- Copyright Section-->
+        <div class="copyright py-4 text-center text-white">
+            <div class="container"><small>Copyright &copy; Sami Shameseldeen 2021</small></div>
+        </div>
+        <!-- Portfolio Modals-->
+        <!-- Bootstrap core JS-->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"></script>
+        <!-- Core theme JS-->
+        <script src="js/scripts.js"></script>
+          <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
+    </body>
 </html>
