--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ Computational Science (GPCS) <br><br> <b>Candidate for FAS SRC GD</b>
         <section class="page-section portfolio" id="portfolio">
             <div class="container">
                 <!-- Portfolio Section Heading-->
-                <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Platform</h2>
+                <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">My Platform</h2>
                 <!-- Icon Divider-->
                 <div class="divider-custom">
                     <div class="divider-custom-line"></div>
@@ -73,17 +73,22 @@ Computational Science (GPCS) <br><br> <b>Candidate for FAS SRC GD</b>
                                     <div id="content">
                                         <ul class="timeline" style="list-style-type: none;">
                                             <li class="event" data-date="12:30 - 1:00pm">
-                                                <h3>Modify the Graduate Assistantship Stipends to fulfil minimal needs</h3>
+                                                <h3>Modify the Graduate Assistantship Stipends to Fulfil Minimal Needs</h3>
                                                 <p>The GA, TA, and RA stipends are insufficient compared to the efforts of graduate students that are
                                                     fulfilling their duties and do not really help especially during the difficult times and tough situations
                                                     that our country is going through. I will make every effort to propose a stipend modification that
-                                                    satisfies the minimal needs of the students.</p>
+                                                    satisfies minimal needs of the students and dollarize the compensations.
+                                                <br>
+                                                Moreover, most GAs are having transportation issues due to feul limitations and high transport costs. I 
+                                                will demand a transportation allowance that varies based on the student's place of residance to make sure
+                                                the stipend is left for personal expenses and not only for the road.
+                                                </p>
                                             </li>
                                             <li class="event" data-date="2:30 - 4:00pm">
-                                                <h3>Strive for more funding towards Graduate Student Supports 
+                                                <h3>Strive for More Funding Towards Graduate Student Supports 
                                                 </h3>
-                                                <p>I will strive to maintain essential student services such as the Financial Assistance for those who
-                                                    needs support during their university experience, and advance more funding for research related to
+                                                <p>I will strive to maintain essential student services such as the financial assistance for those who
+                                                    need support, and advance more funding for research related to
                                                     thesis and publications.</p>
                                             </li>
                                             <li class="event" data-date="5:00 - 8:00pm">
