--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
+
+        <meta property="og:site_name" content="San Roque 2014 Pollos">
+        <meta property="og:title" content="San Roque 2014 Pollos" />
+        <meta property="og:description" content="Programa de fiestas" />
+        <meta property="og:image" itemprop="image" content="http://pollosweb.wesped.es/programa_pollos/play.png">
+        <meta property="og:type" content="website" />
+        <meta property="og:updated_time" content="1440432930" />
+
         <title>Vote - Sami Sh</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
