--- a/index.html
+++ b/index.html
@@ -6,12 +6,11 @@
         <meta name="description" content="" />
         <meta name="author" content="" />
 
-        <meta property="og:site_name" content="San Roque 2014 Pollos">
-        <meta property="og:title" content="San Roque 2014 Pollos" />
-        <meta property="og:description" content="Programa de fiestas" />
-        <meta property="og:image" itemprop="image" content="http://pollosweb.wesped.es/programa_pollos/play.png">
+        <meta property="og:site_name" content="FAS SRC Elections">
+        <meta property="og:title" content="Vote for Sami Sh" />
+        <meta property="og:description" content="About the Candidate and Detailed Platform" />
+        <meta property="og:image" itemprop="image" content="assets/img/15.png">
         <meta property="og:type" content="website" />
-        <meta property="og:updated_time" content="1440432930" />
 
         <title>Vote - Sami Sh</title>
         <!-- Favicon-->
