--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
         <meta property="og:description" content="About the Candidate and Detailed Platform" />
         <meta property="og:image" itemprop="image" content="assets/img/15.png">
         <meta property="og:type" content="website" />
+        <!-- No need to change anything here -->
+        <meta property="og:type" content="website" />
+        <meta property="og:image:type" content="image/jpeg">
+        <meta property="og:image:width" content="300">
+        <meta property="og:image:height" content="300">
 
         <title>Vote - Sami Sh</title>
         <!-- Favicon-->
