--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                                                     challenges of graduate students.</p>
                                             </li>
                                             <li class="event" data-date="8:30 - 9:30pm">
-                                                <h3>Quiet Study Spaces</h3>
+                                                <h3>Secure Quiet Study Spaces</h3>
                                                 <p>With the new distancing regulations for COVID safety, Jaffet library no longer preserves a space for
                                                     graduates. Graduate students in the faculty need a quiet space where they can finish assignments,
                                                     study for midterms and finals, and work on their thesis without noise. If elected, I will apply for a
