added vote link

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                         </div>
                 <!-- Vote Button-->
                 <div class="text-center mt-4">
-                    <a class="btn btn-xl btn-danger" href="https://preelections.aub.edu.lb/">
+                    <a class="btn btn-xl btn-danger" href="https://aubse.aub.edu.lb/">
                         <i class="fas fa-vote-yea me-2"></i>
                         Vote Now !
                     </a>
