--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                 <!-- About Section Content-->
                 <div class="row">
                     <div class="col-lg-4 ms-auto"><p class="lead">I am a second-year graduate student at  AUB in Computational Science. My primary career interest lies in Software Engineering, especially Machine Learning Engineering.</p></div>
-                    <div class="col-lg-4 me-auto"><p class="lead">With my leadership and communication skills coped with years of experience, I believe that I can strive hard enought to achieve my promises and bring student voices back to the forefront.</p></div>
+                    <div class="col-lg-4 me-auto"><p class="lead">With my leadership and communication skills coped with years of experience, I believe that I can strive hard enough to achieve my promises and bring student voices back to the forefront.</p></div>
                 </div>
                 <!-- About Section Button-->
                 <div class="text-center mt-4">
